--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.4"
+    "mongoose": "^4.4.4",
+    "node-fetch": "^1.3.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
