--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-validator": "^2.19.1",
     "mongoose": "^4.4.4",
     "node-fetch": "^1.3.3"
   },
