--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "express-validator": "^2.19.1",
     "mongoose": "^4.4.4",
     "node-fetch": "^1.3.3"
   },
@@ -29,6 +28,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "mocha": "^2.4.5",
-    "mocha-mongoose": "^1.1.1"
+    "mocha-mongoose": "^1.1.1",
+    "supertest": "^1.2.0"
   }
 }
