--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.4",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
